# xplaces

libxplaces-1.0/: CMakeLists.txt
libxplaces-1.0/CMakeMacros/: CMakeMacros.txt
libxplaces-1.0/src/: xpAnnounceItem.cpp  xpDevice.h  xpDeviceImpl.cpp  xpDeviceImpl.h  xpDeviceProxy.cpp  xpDeviceProxy.h  xpEventListener.h  xpEventListenerImpl.cpp  xpEventListenerImpl.h  xpNetwork.cpp  xpNetwork.h  xpPropertyList.h  xpToolSet.cpp  xpToolSet.h  xplaces.h
libxplaces-1.0/src/udp/: xpUDPService.cpp  xpUDPService.h
libxplaces-1.0/src/webserver/: xpSocket.cpp
xpMobile/JSON/: configuration.json
xpMobile/examples/xpApplicationServer/: prova1.js  xpApplicationServer.js  xpSinnova.js
xpMobile/examples/xpApplicationServer/JSON/: configuration.json  configuration_156.148.36.102.json  configuration_156.148.70.68.json  configuration_156.148.70.68b.json  configuration_8090.json  configuration_casa.json  configuration_crs4.json  proxy_configuration.json
xpMobile/examples/xpApplicationServer/Qml/: company.qml  content.qml  diario.qml  slides.qml  subtag.qml  tag.qml  user.qml  user_actions.qml
xpMobile/examples/xpApplicationServer/apps/: xpExample.json  xpProva.js  xpSinnova.json.bak
xpMobile/examples/xpApplicationServer/data/: aziende.json.all.inc  aziende.json.inc
xpMobile/examples/xpApplicationServer/html/: template_folder.html  template_sinnova.html  template_sinnova.json
xpMobile/examples/xpApplicationServer/persist/: contents  scalefactors  users
xpMobile/examples/xplacesMobileTest/: client.html  demo.html  deviceList.html  index.html  keyboard.html  orientation.html  unity.html  xpDesktop.html  xpDesktopQrCode.html  xpMonitor.css  xpMonitor.html  xplacesDummy.js  xplacesSerial.js  xplacesServer.js
xpMobile/examples/xplacesMobileTest/JSON/: configuration.json  configuration2.json  configuration_156.148.70.68.json  configuration_8090.json  configuration_casa.json  configuration_casa_proxy.json  configuration_crs4.json  configuration_crs4_proxy.json  configuration_crs4_tframe.json  configuration_vm.json  configuration_vm_8090.json
xpMobile/examples/xplacesMobileTest/css/: Sinnova.css
xpMobile/examples/xplacesMobileTest/js/: deviceProperties.js  xplacesClientLib.js
xpMobile/examples/xplacesMobileTest/js/jquery-mobile/: iscroll.js
xpMobile/examples/xplacesMobileTest/unity/: Car.js
